--- a/resume.html
+++ b/resume.html
@@ -67,11 +67,11 @@
 
     <div class="tech-skills">
         <ul>
-            <li>Self-learning <b>HTML</b> and <b>CSS</b> for the past 4 months by building a portfolio website.</li>
-            <li>Experience plotting graphs related to macroeconomics, and probability and statistics with <b>R</b> through intro to macroeconomics, probability, and statistics courses.</li>
-            <li>Learned the fundamentals of CS through the application of elementary programming patterns using <b>Python</b> for 4 months in intro to computer science II.</li>
-            <li>Proficient at creating financial statements, and amortization schedules with <b>Microsoft Excel</b> in intro to Financial Accounting, Managerial Accounting, and Financial Mathematics courses.</li>
-            <li>Developed strong <b>communication</b> and <b>leadership</b> skills through my professional experiences.</li> 
+            <li>Proficient with data structures and algorithms using Python in Intro to Computer Science II.</li>
+            <li>Self-taught <b>HTML</b> and <b>CSS</b> by building a portfolio website.</li>
+            <li>Knowledge of the <b>Software Development Cycle</b> and experience with <b>User Acceptance Testing</b></li>
+            <li>Proficient in <b>debugging</b> and <b>supporting</b> software systems</li>
+            <li>Proven organizational <b>analysis</b> and <b>problem-solving</b> skills</li>
         </ul>
     </div>
 
@@ -90,6 +90,26 @@
 
     <div class="experience">
         <ul>
+            <li class="job-title"> <b>Jr. Systems Developer</b> <i>May 2023–August 2023</i> 
+                <li class="job-company"><i>Co-operators Group Limited, Regina, Saskatchewan</i></li>
+                <ul class="job-duties">
+                    <li>Collaborated with business partners to gather requirements.</li>
+                    <li>Automated IBM Ingenium processes. Saving staff up to 1 hour of work per week.</li>
+                    <li>Utilized C#, SQL, and libraries to design and build 3 robust and dependable automations.</li>
+                    <li>Worked in an agile framework leveraging DevOps and Bitbucket</li>
+                </ul>
+                </li>
+                <li class="job-title"> <b>Robotic Process Automation Developer Intern</b> <i>May 2022– December 2022</i> 
+                    <li class="job-company"><i>Co-operators Group Limited, Guelph, Ontario</i></li>
+                    <ul class="job-duties">
+                        <li>Managed the full Software Development Lifecycle: Design, Build, Unit Test, Peer Review and
+                            Production support.</li>
+                        <li>Developed a finance business process that returns 1040 staff hours per year to the business.</li>
+                        <li>Enhanced 15+ automation in support of production defects and requests from the business user.</li>
+                        <li>Contributed to saving 2294 staff hours and helped achieve the goal of saving 2760 staff hours in
+                            2022.</li>
+                    </ul>
+                    </li>
            <li class="job-title"> <b>Bookkeeper</b> <i>December 2020-Present</i> 
                <li class="job-company"><i>Fusion Indian Cuisine, Guelph, Ontario </i></li>
                <ul class="job-duties">
@@ -107,33 +127,15 @@
                 <li>Handled cash and closed cash register, ensured an accurate cash float.</li>
                 <li>Dealt with frustrated customers and made ethical decisions that benefited the company.</li>
             </ul>
-            </li>
-            <li class="job-title"> <b>Camp counsellor</b> <i>July 2019–August 2019</i> 
-                <li class="job-company"><i>Guelph Neighborhood Support Coalition, Guelph, Ontario</i></li>
-                <ul class="job-duties">
-                    <li>Coordinated with a team of 4 to supervise 15 to 20 kids, ages 4-12.</li>
-                    <li>Led kids through various team and skill building games, and arts and crafts.</li>
-                    <li>Executed various team building initiatives to ensure an inclusive environment for team members and kids.</li>
-                    <li>Communicated with parents to discuss their child’s behavior and with the organization’s senior staff regarding supplies, work schedules, and upcoming activities.</li>
-                </ul>
-                </li>
-
-         
+            </li>         
         </ul>
     </div>
-    <div class="rela-block caps greyed">ACTIVITIES & ACHIEVEMENTS</div>
+    <div class="rela-block caps greyed">CERTIFICATION</div>
     <div class=" separator"></div>
 
     <div class="ACHIEVEMENTS"> 
         <ul>
-            <li class="ach">D10 Badminton champion 	<i>April 2016</i></li>
-            <li class="ach"> 
-                Jack Burnett Memorial Award <i>June 2019</i>
-                <ul>
-                    <li class="sub"> Highest grade in kinesiology in my graduating class </li>
-                </ul>
-            </li>
-            <li class="ach">University of Waterloo Merit Scholarship <i>October 2020 </i></li>      							      
+            <li class="ach">UiPath Advanced RPA Developer<i>December 2022</i></li>  							      
         </ul>
     </div>
 
